// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MovieCard > Snapshot Tests > should render MovieCard with complete movie data 1`] = `
<article
  class="movie-card movie-card--medium"
>
  <figure
    class="image-container"
  >
    <img
      alt="Test Movie poster"
      class="image"
      loading="lazy"
      src="mocked-image-url"
    />
    <button
      aria-label="Favorite"
      class="favorite-btn "
      title="Add to favorites"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-heart"
        fill="none"
        height="20"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M2 9.5a5.5 5.5 0 0 1 9.591-3.676.56.56 0 0 0 .818 0A5.49 5.49 0 0 1 22 9.5c0 2.29-1.5 4-3 5.5l-5.492 5.313a2 2 0 0 1-3 .019L5 15c-1.5-1.5-3-3.2-3-5.5"
        />
      </svg>
    </button>
  </figure>
  <section
    class="movie-content"
  >
    <header
      class="header"
    >
      <h2
        class="title"
      >
        Test Movie
      </h2>
      <aside
        class="meta"
      >
        <time
          class="year"
          datetime="2023-12-25"
        >
          2023
        </time>
        <span
          aria-label="Rating: 8.5 out of 10"
          class="rating"
        >
          ★ 
          8.5
          /10
        </span>
      </aside>
    </header>
    <section
      class="overview-container"
    >
      <p
        class="overview "
      >
        A test movie description
      </p>
    </section>
  </section>
</article>
`;

exports[`MovieCard > Snapshot Tests > should render MovieCard with missing data 1`] = `
<article
  class="movie-card movie-card--medium"
>
  <figure
    class="image-container"
  >
    <img
      alt="Movie poster placeholder"
      class="image"
      src="/placeholder-movie.jpg"
    />
    <button
      aria-label="Favorite"
      class="favorite-btn "
      title="Add to favorites"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-heart"
        fill="none"
        height="20"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M2 9.5a5.5 5.5 0 0 1 9.591-3.676.56.56 0 0 0 .818 0A5.49 5.49 0 0 1 22 9.5c0 2.29-1.5 4-3 5.5l-5.492 5.313a2 2 0 0 1-3 .019L5 15c-1.5-1.5-3-3.2-3-5.5"
        />
      </svg>
    </button>
  </figure>
  <section
    class="movie-content"
  >
    <header
      class="header"
    >
      <h2
        class="title"
      >
        Title Missing
      </h2>
      <aside
        class="meta"
      >
        <time
          class="year"
        >
          Missing year
        </time>
        <span
          aria-label="Rating: N/A out of 10"
          class="rating"
        >
          ★ 
          N/A
          /10
        </span>
      </aside>
    </header>
    <section
      class="overview-container"
    >
      <p
        class="overview "
      >
        A test movie description
      </p>
    </section>
  </section>
</article>
`;

exports[`MovieCard > Snapshot Tests > should render MovieCard with missing poster 1`] = `
<article
  class="movie-card movie-card--medium"
>
  <figure
    class="image-container"
  >
    <img
      alt="Movie poster placeholder"
      class="image"
      src="/placeholder-movie.jpg"
    />
    <button
      aria-label="Favorite"
      class="favorite-btn "
      title="Add to favorites"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-heart"
        fill="none"
        height="20"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M2 9.5a5.5 5.5 0 0 1 9.591-3.676.56.56 0 0 0 .818 0A5.49 5.49 0 0 1 22 9.5c0 2.29-1.5 4-3 5.5l-5.492 5.313a2 2 0 0 1-3 .019L5 15c-1.5-1.5-3-3.2-3-5.5"
        />
      </svg>
    </button>
  </figure>
  <section
    class="movie-content"
  >
    <header
      class="header"
    >
      <h2
        class="title"
      >
        Test Movie
      </h2>
      <aside
        class="meta"
      >
        <time
          class="year"
          datetime="2023-12-25"
        >
          2023
        </time>
        <span
          aria-label="Rating: 8.5 out of 10"
          class="rating"
        >
          ★ 
          8.5
          /10
        </span>
      </aside>
    </header>
    <section
      class="overview-container"
    >
      <p
        class="overview "
      >
        A test movie description
      </p>
    </section>
  </section>
</article>
`;
